--- a/rottenMovies/src/main/resources/templates/header.html
+++ b/rottenMovies/src/main/resources/templates/header.html
@@ -6,7 +6,7 @@
         <div class="row">
           <div class="col-sm-8 col-md-7 py-4">
             <h4 class="text-white">Explore</h4>
-            <p class="text-muted">Explore our vast catalogue of movies and leave a review</p>
+            <p class="text-muted">Join our community, post your thoughts and follow like-minded top critics </p>
           </div>
           <div class="col-sm-4 offset-md-1 py-4">
             <h4 class="text-white">Links</h4>
@@ -27,8 +27,19 @@
                 </div>
                 <li th:if="${credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO'}"><a th:href="'/admin-panel'">Admin panel</a></li>
                 <li><a href="/logout" class="text-white">Logout</a></li>
+
               </div>
             </ul>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Hall of Fame
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="/HOFGenres">Genres</a>
+                <a class="dropdown-item" href="/HOFProductionHouses">Production Houses</a>
+                <a class="dropdown-item" href="/HOFYears">Years</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
