fix bug redirect only if movieAndIndex is not null

--- a/rottenMovies/src/main/resources/templates/admin-panel.html
+++ b/rottenMovies/src/main/resources/templates/admin-panel.html
@@ -132,8 +132,7 @@
                 </tbody>
               </table>
             </div>
-            <div th:replace="infoBox :: html_infoBox">
-            </div>
+            <div th:replace="infoBox :: html_infoBox"></div>
           </main>
         </div>
       </div>
