add legend to reviewbombing page

--- a/rottenMovies/src/main/resources/templates/review-bombing.html
+++ b/rottenMovies/src/main/resources/templates/review-bombing.html
@@ -62,8 +62,8 @@
             <th scope="col">Movie</th>
             <th scope="col">Storic Count</th>
             <th scope="col">Storic Rate</th>
-            <th scope="col">Targe Count</th>
-            <th scope="col">Targe Rate</th>
+            <th scope="col">Target Count</th>
+            <th scope="col">Target Rate</th>
         </tr>
         </thead>
         <tbody>
@@ -76,6 +76,13 @@
         </tr>
         </tbody>
     </table>
+<!--    TODO implement this legend-->
+    <p>Movie: title of the selected movie  </p>
+    <p>Storic Count: count of total number of review before the date: today - number of month passed in the input</p>
+    <p>Storic Rate: rate of the positive review before the date: today - number of month passed in the input </p>
+    <p>Target Count: count of the total number of review between today and the date: today - number of month passed in the input</p>
+    <p>Target Rate: rate of the positive review between today and the date: today - number of month passed in the input</p>
+
 
 </div>
 <footer>
