--- a/rottenMovies/src/main/resources/templates/login.html
+++ b/rottenMovies/src/main/resources/templates/login.html
@@ -71,7 +71,7 @@
       <a href="/register">Don't have an account? Register</a>
       <p class="mt-5 mb-3 text-muted">© 2017–2022</p>
     </form>
-    <div th:replace="infoBox :: html_infoBox">
+    <div th:replace="infoBox :: html_infoBox"></div>
   </main>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
