--- a/rottenMovies/src/main/resources/templates/login.html
+++ b/rottenMovies/src/main/resources/templates/login.html
@@ -50,7 +50,7 @@
   <script th:if="${credentials}">window.location.assign("/movie");</script>
   <main class="form-signin w-100 m-auto">
     <form method="post">
-      <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+      <img class="mb-4" src="images/logo.png" alt="" width="72" height="100">
       <h1 class="h3 mb-3 fw-normal">Please login</h1>
 
       <div class="form-floating">
