--- a/rottenMovies/src/main/resources/templates/review-bombing.html
+++ b/rottenMovies/src/main/resources/templates/review-bombing.html
@@ -77,13 +77,14 @@
         </tbody>
     </table>
 <!--    TODO implement this legend-->
-    <p>Movie: title of the selected movie  </p>
-    <p>Storic Count: count of total number of review before the date: today - number of month passed in the input</p>
-    <p>Storic Rate: rate of the positive review before the date: today - number of month passed in the input </p>
-    <p>Target Count: count of the total number of review between today and the date: today - number of month passed in the input</p>
-    <p>Target Rate: rate of the positive review between today and the date: today - number of month passed in the input</p>
-
-
+    <div class="alert alert-primary" role="alert">
+        <h4 class="alert-heading">Admin manual</h4>
+        <p><b>Movie: </b>title of the selected movie  </p>
+        <p><b>Storic Count: </b>count of total number of review before the date: today - number of month passed in the input</p>
+        <p><b>Storic Rate: </b>rate of the positive review before the date: today - number of month passed in the input </p>
+        <p><b>Target Count: </b>count of the total number of review between today and the date: today - number of month passed in the input</p>
+        <p><b>Target Rate: </b>rate of the positive review between today and the date: today - number of month passed in the input</p>
+    </div>
 </div>
 <footer>
     <!-- place footer here -->
