--- a/rottenMovies/src/main/resources/templates/user.html
+++ b/rottenMovies/src/main/resources/templates/user.html
@@ -15,8 +15,8 @@
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold" th:text="${user.username}">UserName</h1>
                     <div class="row">
-                        <div th:text="${user.firstName}">FirstName</div>
-                        <div th:text="${user.lastName}">LastName</div>
+                        <div th:text="'First Name: '+${user.firstName}">FirstName</div>
+                        <div th:text="'Last Name: '+${user.lastName}">LastName</div>
                         <div th:if="${credentials}">
                             <div th:if="${user.username==credentials.username}">
                                 <form method="post">
@@ -35,13 +35,13 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="col-md-8 fs-4" th:text="${#dates.format(user.registrationDate, 'yyyy-MM-dd')}">Registration Date</div>
+                        <div class="col-md-8 fs-4" th:text="'Registration Date: '+${#dates.format(user.registrationDate, 'yyyy-MM-dd')}">Registration Date</div>
                         <div th:switch="${user.class.name}">
                             <a th:case="'it.unipi.dii.lsmsdb.rottenMovies.DTO.TopCriticDTO'" th:text="'Top Critic *'">Top</a>
                             <a th:case="*" th:text="'Normal User'">Normal</a>
                         </div>
                         <div th:if="${user.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.TopCriticDTO'}">
-                            <div th:text="${numberOfFollowers}">Followers 100</div>
+                            <div th:text="'Number of followers: '+${numberOfFollowers}">Followers 100</div>
                         </div>
                         <div th:if="${credentials}">
                             <div th:if="${!(credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO')}">
