Minor style fixes in register,feed,header and registerTopCritic

--- a/rottenMovies/src/main/resources/templates/header.html
+++ b/rottenMovies/src/main/resources/templates/header.html
@@ -29,6 +29,8 @@
                     <a class="dropdown-item" th:href="|/user/${credentials.id}|">Your profile</a>
                     <a class="dropdown-item" th:href="|/suggested-top-critic/${credentials.username}|">Suggestions</a>
                     <a class="dropdown-item" th:href="|/preferred_genres/${credentials.username}|">Your preferred genres</a>
+                    <a class="dropdown-item" href="/feed">Your personal feed</a>
+
                   </div>
                 </div>
               </div>
