--- a/rottenMovies/src/main/resources/templates/registerTopCritic.html
+++ b/rottenMovies/src/main/resources/templates/registerTopCritic.html
@@ -31,7 +31,7 @@
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
             <a href="/" class="navbar-brand d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
+                <img class="me-2" src="/images/icon.png" width="30" height="30">
                 <strong>rotten Movies</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
             <h1 class="h3 mb-3 fw-normal">Top Critic creation</h1>
 
             <div class="form-floating">
-                <input type="text" class="form-control" id="floatingFirstName" placeholder="first name" name="first_name" required>
+                <input type="text" class="form-control" id="floatingFirstName" placeholder="first name" name="first_name" required autofocus>
                 <label for="floatingFirstName">First Name</label>
             </div>
             <div class="form-floating">
